will activate the current page

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 	transition: all.2s;
 }*/
 p{
-	font-family: 'Open Sans', sans-serif;
+	/* font-family: 'Open Sans', sans-serif; */
 	font-size: 13px;
 	color: #9b9b9b;
 	line-height: 24px;
