--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 	transition: all.2s;
 }*/
 p{
-	/* font-family: 'Open Sans', sans-serif; */
+	font-family:  'Lora', 'Open Sans', sans-serif;
 	font-size: 13px;
 	color: #9b9b9b;
 	line-height: 24px;
@@ -7355,7 +7355,7 @@ select.form-control, select.form-control:hover, select.form-control:focus, selec
 }
 .post-events-card p{
     color: #000000;
-    line-height: 14px;
+    /* line-height: 14px; */
 }
 .post-events-heading{
     font-weight: bold;
